--- a/translation/translations.csv
+++ b/translation/translations.csv
@@ -2345,11 +2345,11 @@ SpeciesAbility.betazoid.description,Betazoids can sense the minds of living crea
 SpeciesAbility.cardassian,Healthy Suspicions,,,,,,
 SpeciesAbility.cardassian.description,"You may add 1 Threat when interacting with an NPC to ask the gamemaster if that NPC is lying about something. The gamemaster must answer either Yes or No, and this answer must be accurate, but the gamemaster does not have to specify what the NPC is lying about.",,,,,,
 SpeciesAbility.denobulan,Breadth of Study,,,,,,
-SpeciesAbility.denobulan.description,"Denobulans have a robust immune system, but a vulnerability to various forms of radiation poisoning. They are adept climbers. Denobulans do not need to sleep, but must hibernate for several days each year, becoming disoriented if kept awake during this period.",,,,,,
+SpeciesAbility.denobulan.description,You may select two additional focuses.,,,,,,
 SpeciesAbility.ferengi,The Great Material Continuum,,,,,,
 SpeciesAbility.ferengi.description,"Once per session, when obtaining additional equipment, you may reduce the **Opportunity Cost** of an item by 1, to a minimum of 0.",,,,,,
 SpeciesAbility.human,Faith of the Heart,,,,,,
-SpeciesAbility.human.description,"Humans are adaptable and resilient, and their resolve and ambition often allow them to resist great hardship and triumph despite great adversity. However, Humans can also be reckless, stubborn, irrational, and unpredictable.",,,,,,
+SpeciesAbility.human.description,"When you use one of your values to spend or gain Determination, you may also add 1 Momentum to the group pool.",,,,,,
 SpeciesAbility.klingon,Brak'lul,,,,,,
 SpeciesAbility.klingon.description,"You gain 1 Protection which stacks with the benefits of any armor worn. Further, when another character attempts _First Aid_ to heal you, they may re-roll a d20.",,,,,,
 SpeciesAbility.orion,Never at Face Value,,,,,,
